<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gerenciador de Tarefas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- Login -->
    <string name="login_title">Login</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="login_register_link">Não tem conta? Cadastre-se</string>
    
    <!-- Register -->
    <string name="register_title">Cadastro</string>
    <string name="register_confirm_password_hint">Confirmar Senha</string>
    <string name="register_button">Cadastrar</string>
    <string name="register_login_link">Já tem conta? Faça login</string>
    
    <!-- Home -->
    <string name="home_title">Minhas Tarefas</string>
    <string name="home_new_task">Nova Tarefa</string>
    <string name="home_no_tasks">Nenhuma tarefa encontrada</string>
    
    <!-- Task -->
    <string name="task_title">Tarefa</string>
    <string name="task_title_hint">Título da Tarefa</string>
    <string name="task_description_hint">Descrição</string>
    <string name="task_date_hint">Data</string>
    <string name="task_time_hint">Hora</string>
    <string name="task_save">Salvar</string>
    
    <!-- Profile -->
    <string name="profile_title">Perfil</string>
    <string name="profile_username_hint">Nome de usuário</string>
    <string name="profile_name_hint">Nome</string>
    <string name="profile_email_hint">Email</string>
    <string name="profile_phone_hint">Telefone</string>
    <string name="profile_camera">Câmera</string>
    <string name="profile_gallery">Galeria</string>
    <string name="profile_save">Salvar</string>
    <string name="profile_logout">Sair</string>
    <string name="profile_saved">Perfil salvo com sucesso</string>
    <string name="camera_permission_denied">Permissão da câmera negada</string>
    <string name="profile_photo_title">Alterar foto</string>
    <string-array name="profile_photo_options">
        <item>Escolher da galeria</item>
        <item>Tirar foto</item>
    </string-array>
    
    <!-- Common -->
    <string name="logout">Sair</string>

    <string name="theme_toggle">Alternar Tema</string>

    <!-- Environment Variables -->
    <string name="env_app_name" translatable="false">Task Manager</string>
    <string name="env_min_password_length" translatable="false">6</string>
    <string name="env_max_task_title_length" translatable="false">50</string>
    <string name="env_max_task_description_length" translatable="false">200</string>
    <string name="env_date_format" translatable="false">dd/MM/yyyy</string>
    <string name="env_supported_image_types" translatable="false">image/*</string>
    <string name="env_max_image_size_mb" translatable="false">5</string>

    <string name="app_name_stylized">TASKS</string>
    <string name="app_logo_description">Logo do aplicativo Tasks</string>

    <!-- Weather -->
    <string name="weather_error">Não foi possível carregar dados do clima</string>
    <string name="weather_connection_error">Falha na conexão</string>

    <string name="select_language">Selecione o idioma</string>
    <string name="language_portuguese">Português</string>
    <string name="language_english">Inglês</string>
    <string name="language_spanish">Espanhol</string>
    <string name="apply">Aplicar</string>
    <string name="language_changed">Idioma alterado. Reiniciando aplicativo...</string>

    <string name="profile_name">Nome</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_phone">Telefone</string>

    <!-- Adicionar estas strings -->
    <string name="forgot_password_title">Recuperar Senha</string>
    <string name="forgot_password_description">Digite seu email e enviaremos um link para redefinir sua senha</string>
    <string name="forgot_password_button">Enviar Link</string>
    <string name="email_required">Email é obrigatório</string>
    <string name="reset_email_sent">Email de redefinição enviado</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
    <string name="passwords_dont_match">As senhas não coincidem</string>
    <string name="registration_success">Cadastro realizado com sucesso</string>
    <string name="forgot_password_link">Esqueci minha senha</string>
    <string name="delete_task">Excluir tarefa</string>
    <string name="no_tasks_message">Você não tem tarefas</string>

    <string name="name_hint">Nome</string>

    <!-- Adicione estas strings -->
    <string name="task_edit_title">Editar Tarefa</string>
    <string name="task_new_title">Nova Tarefa</string>

    <!-- Adicione estas strings -->
    <string name="edit_task">Editar Tarefa</string>
    <string name="add_task">Adicionar Tarefa</string>
    <string name="error_empty_title">O título não pode estar vazio</string>
    <string name="task_added">Tarefa adicionada com sucesso</string>
    <string name="error_adding_task">Erro ao adicionar tarefa</string>
    <string name="task_updated">Tarefa atualizada com sucesso</string>
    <string name="error_updating_task">Erro ao atualizar tarefa</string>

    <!-- Strings que estão faltando -->
    <string name="profile_image_description">Foto de perfil</string>
    <string name="profile_save_button">Salvar perfil</string>
    <string name="task_save_button">Salvar tarefa</string>

    <!-- Adicione esta string -->
    <string name="back_to_login">Voltar para login</string>
</resources>